[package]
name = "exhume_body"
version = "0.3.5"
edition = "2021"
description = "Format-agnostic data extraction from disk images and other potential data structures."
documentation = "https://www.forensicxlab.com/docs/category/exhume---body"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"
readme = "README.md"


[dependencies]
flate2 = "1.0.25"
glob = "0.3.1"
clap = { version = "4.5", features = ["cargo"] }
clap-num = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"

log = "0.4.29"
env_logger = "0.11.6"
